# Attrition-Analysis

./: .gitignore  README.md  main.py  pyproject.toml
data/clean/: Employee-Attrition_Clean.csv
notebooks/eda/: 01_data_preparation.ipynb  02_categorical_analysis.ipynb  03_quantitative_analysis.ipynb  04_mixed_analysis.ipynb
notebooks/modeling/: 01_log_regression.ipynb  02_decision_tree.ipynb  02_models_comparison.ipynb  03_random_forest.ipynb  04_gradient_boosting.ipynb  05_xgboost.ipynb  06_model_comparison.ipynb
notebooks/results/: 01_executive_summary.ipynb
outputs/tables/: categorical_attrition_rates.csv  categorical_model_comparison.csv  categorical_moderate_strong_pairs.csv  categorical_vif_results.csv  chi_square_attrition_results.csv  cramers_V_attrition_results.csv  final_best_thresholds_cv.csv  final_cross_validation_results.csv  final_gap_analysis.csv  final_general_results.csv  final_summary.csv  final_test_results.csv  final_tuning_results.csv  logistic_best_thresholds.csv  logistic_cross_validation.csv  logistic_general_comparison.csv  mixed__model_comparison.csv  mixed_association_results.csv  mixed_vif_results.csv  model_2_odds_ratios.csv  model_3_odds_ratios.csv  quantitative_correlation_attrition.csv  quantitative_model_comparison.csv  quantitative_moderate_strong_correlations.csv  quantitative_stats_by_attrition.csv  quantitative_vif_results.csv  target_distribution_percent.csv
src/attrition_analysis/: associations_test.py  data_selection.py  logistic_models_utils.py  models_utils.py  multicollinearity.py  statistics_utils.py
