[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "attrition-analysis"
version = "0.1.0"
description = "Employee attrition analysis and machine learning project."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel",
    "jupyter",
    "matplotlib",
    "numpy",
    "pandas",
    "scikit-learn",
    "scipy",
    "shap",
    "statsmodels",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
